20230101 - edit laundry & artikel done

--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -21,7 +21,7 @@
             android:id="@+id/txtUserNama"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:background="@drawable/edittextshape"
+            android:background="@drawable/edittextrgsshape"
             android:hint="Nama"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
             android:id="@+id/txtUserPhone"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:background="@drawable/edittextshape"
+            android:background="@drawable/edittextrgsshape"
             android:hint="No Telp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
