--- a/app/src/main/res/drawable/buttonsave.xml
+++ b/app/src/main/res/drawable/buttonsave.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#50bc94" />
+    <solid android:color="#50BC94" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
