--- a/app/src/main/res/layout/popuplogout.xml
+++ b/app/src/main/res/layout/popuplogout.xml
@@ -55,14 +55,15 @@
                 <TextView
                     android:id="@+id/txtNo"
                     android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="No"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:gravity="center"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -78,14 +79,15 @@
                 <TextView
                     android:id="@+id/txtYes"
                     android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="Yes"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:gravity="center"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
