--- a/app/src/main/res/layout/transactionlist_user.xml
+++ b/app/src/main/res/layout/transactionlist_user.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="28dp"
+    app:cardCornerRadius="24dp"
     android:layout_marginTop="6dp"
     app:cardBackgroundColor="#9AD0EC"
     android:id="@+id/parentLayout">
@@ -12,11 +13,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp">
+
+            <ImageView
+                android:id="@+id/imgLaundryTransaction"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/roundbackground"
+                android:clipToOutline="true"
+                android:src="@drawable/ic_profile_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:id="@+id/txtNamaLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="16dp"
             android:text="NamaLaundry"
             android:textColor="@color/white"
@@ -29,13 +52,42 @@
             android:id="@+id/txtHarga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="8dp"
             android:text="Harga"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtNamaLaundry" />
+
+        <TextView
+            android:id="@+id/txtStatus"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="8dp"
+            android:text="Status"
+            android:textStyle="italic"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtHarga" />
+
+
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/txtId"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="8dp"
+            android:text="Id"
+            android:textStyle="italic"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtHarga" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
